feat: add result video downloads
